--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -39,6 +39,13 @@ earthkit-meteo:
   downstream-ci:
     config_path: ""
 
+earthkit-regrid:
+  type: python
+  master_branch: main
+  requirements_path: tests/downstream-ci-requirements.txt
+  downstream-ci:
+    config_path: ""
+
 ecbuild:
   type: cmake
   input: false
