--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -18,6 +18,9 @@ name: downstream-ci
       earthkit-meteo:
         required: false
         type: string
+      earthkit-regrid:
+        required: false
+        type: string
       eccodes:
         required: false
         type: string
@@ -94,6 +97,7 @@ jobs:
       cfgrib: ${{ steps.setup.outputs.cfgrib }}
       earthkit-data: ${{ steps.setup.outputs.earthkit-data }}
       earthkit-meteo: ${{ steps.setup.outputs.earthkit-meteo }}
+      earthkit-regrid: ${{ steps.setup.outputs.earthkit-regrid }}
       eccodes: ${{ steps.setup.outputs.eccodes }}
       eccodes-python: ${{ steps.setup.outputs.eccodes-python }}
       ecflow: ${{ steps.setup.outputs.ecflow }}
@@ -152,6 +156,13 @@ jobs:
             master_branch: main
             develop_branch: develop
             input: ${{ inputs.earthkit-meteo }}
+            optional_matrix: null
+          ecmwf/earthkit-regrid:
+            path: ''
+            python: true
+            master_branch: main
+            develop_branch: develop
+            input: ${{ inputs.earthkit-regrid }}
             optional_matrix: null
           ecmwf/eccodes:
             path: .github/ci-config.yml
@@ -566,6 +577,27 @@ jobs:
     strategy:
       fail-fast: false
       matrix: ${{ fromJson(needs.setup.outputs.earthkit-meteo) }}
+    env:
+      DEP_TREE: ${{ needs.setup.outputs.dep_tree }}
+    runs-on: ${{ matrix.labels }}
+    steps:
+    - uses: ecmwf-actions/reusable-workflows/ci-python@v2
+      with:
+        repository: ${{ matrix.owner_repo_ref }}
+        checkout: true
+        python_dependencies: ''
+        codecov_upload: ${{ needs.setup.outputs.trigger_repo == github.job && inputs.codecov_upload && needs.setup.outputs.py_codecov_platform == matrix.name }}
+        codecov_token: ${{ secrets.CODECOV_UPLOAD_TOKEN }}
+        requirements_path: tests/downstream-ci-requirements.txt
+  earthkit-regrid:
+    name: earthkit-regrid
+    needs:
+    - setup
+    - python-qa
+    if: ${{ (always() && !cancelled()) && contains(join(needs.*.result, ','), 'success') && needs.setup.outputs.earthkit-regrid && (inputs.earthkit-regrid) }}
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.setup.outputs.earthkit-regrid) }}
     env:
       DEP_TREE: ${{ needs.setup.outputs.dep_tree }}
     runs-on: ${{ matrix.labels }}
