Add multio to dependency_tree.yml and downstream-ci[-hpc].yml

--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -45,6 +45,9 @@ name: downstream-ci
       mir:
         required: false
         type: string
+      multio:
+        required: false
+        type: string
       multiurl:
         required: false
         type: string
