--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -164,6 +164,6 @@ thermofeel:
 
 cascade:
   type: python
-  master_branch: main
+  master_branch: add-to-downstream-ci
   downstream-ci: 
     config_path: ""
