--- a/.github/workflows/downstream-ci-hpc.yml
+++ b/.github/workflows/downstream-ci-hpc.yml
@@ -11,6 +11,9 @@ name: downstream-ci-hpc
       earthkit-data:
         required: false
         type: string
+      earthkit-geo:
+        required: false
+        type: string
       earthkit-meteo:
         required: false
         type: string
@@ -83,6 +86,7 @@ jobs:
       atlas: ${{ steps.setup.outputs.atlas }}
       cfgrib: ${{ steps.setup.outputs.cfgrib }}
       earthkit-data: ${{ steps.setup.outputs.earthkit-data }}
+      earthkit-geo: ${{ steps.setup.outputs.earthkit-geo }}
       earthkit-meteo: ${{ steps.setup.outputs.earthkit-meteo }}
       earthkit-regrid: ${{ steps.setup.outputs.earthkit-regrid }}
       eccodes: ${{ steps.setup.outputs.eccodes }}
@@ -135,6 +139,13 @@ jobs:
             master_branch: main
             develop_branch: develop
             input: ${{ inputs.earthkit-data }}
+            optional_matrix: null
+          ecmwf/earthkit-geo:
+            path: .github/ci-hpc-config.yml
+            python: true
+            master_branch: main
+            develop_branch: develop
+            input: ${{ inputs.earthkit-geo }}
             optional_matrix: null
           ecmwf/earthkit-meteo:
             path: .github/ci-hpc-config.yml
@@ -425,6 +436,31 @@ jobs:
           ${{ inputs.pdbufr }}
           ${{ inputs.eccodes-python }}
           ${{ inputs.pyodc }}
+        python_requirements: tests/downstream-ci-requirements.txt
+  earthkit-geo:
+    name: earthkit-geo
+    needs:
+    - setup
+    if: ${{ (always() && !cancelled()) && contains(join(needs.*.result, ','), 'success') && needs.setup.outputs.earthkit-geo && (inputs.earthkit-geo) }}
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.setup.outputs.earthkit-geo) }}
+    env:
+      DEP_TREE: ${{ needs.setup.outputs.dep_tree }}
+    runs-on:
+    - self-hosted
+    - linux
+    - hpc
+    steps:
+    - uses: ecmwf-actions/reusable-workflows/ci-hpc@v2
+      with:
+        github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
+        github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
+        troika_user: ${{ secrets.HPC_CI_SSH_USER }}
+        repository: ${{ matrix.owner_repo_ref }}
+        build_config: ${{ matrix.config_path }}
+        dependencies: ''
+        python_dependencies: ''
         python_requirements: tests/downstream-ci-requirements.txt
   earthkit-meteo:
     name: earthkit-meteo
