--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -32,6 +32,13 @@ earthkit-data:
       python -m pytest --forked -vv -m 'no_cache_init'
       python -m coverage report
 
+earthkit-geo:
+  type: python
+  master_branch: main
+  requirements_path: tests/downstream-ci-requirements.txt
+  downstream-ci:
+    config_path: ""
+
 earthkit-meteo:
   type: python
   master_branch: main
