--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -15,6 +15,9 @@ name: downstream-ci
       earthkit-data:
         required: false
         type: string
+      earthkit-geo:
+        required: false
+        type: string
       earthkit-meteo:
         required: false
         type: string
@@ -96,6 +99,7 @@ jobs:
       atlas: ${{ steps.setup.outputs.atlas }}
       cfgrib: ${{ steps.setup.outputs.cfgrib }}
       earthkit-data: ${{ steps.setup.outputs.earthkit-data }}
+      earthkit-geo: ${{ steps.setup.outputs.earthkit-geo }}
       earthkit-meteo: ${{ steps.setup.outputs.earthkit-meteo }}
       earthkit-regrid: ${{ steps.setup.outputs.earthkit-regrid }}
       eccodes: ${{ steps.setup.outputs.eccodes }}
@@ -149,6 +153,13 @@ jobs:
             master_branch: main
             develop_branch: develop
             input: ${{ inputs.earthkit-data }}
+            optional_matrix: null
+          ecmwf/earthkit-geo:
+            path: ''
+            python: true
+            master_branch: main
+            develop_branch: develop
+            input: ${{ inputs.earthkit-geo }}
             optional_matrix: null
           ecmwf/earthkit-meteo:
             path: ''
@@ -568,6 +579,27 @@ jobs:
           python -m pytest -v -m 'notebook'
           python -m pytest --forked -vv -m 'no_cache_init'
           python -m coverage report
+  earthkit-geo:
+    name: earthkit-geo
+    needs:
+    - setup
+    - python-qa
+    if: ${{ (always() && !cancelled()) && contains(join(needs.*.result, ','), 'success') && needs.setup.outputs.earthkit-geo && (inputs.earthkit-geo) }}
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.setup.outputs.earthkit-geo) }}
+    env:
+      DEP_TREE: ${{ needs.setup.outputs.dep_tree }}
+    runs-on: ${{ matrix.labels }}
+    steps:
+    - uses: ecmwf-actions/reusable-workflows/ci-python@v2
+      with:
+        repository: ${{ matrix.owner_repo_ref }}
+        checkout: true
+        python_dependencies: ''
+        codecov_upload: ${{ needs.setup.outputs.trigger_repo == github.job && inputs.codecov_upload && needs.setup.outputs.py_codecov_platform == matrix.name }}
+        codecov_token: ${{ secrets.CODECOV_UPLOAD_TOKEN }}
+        requirements_path: tests/downstream-ci-requirements.txt
   earthkit-meteo:
     name: earthkit-meteo
     needs:
@@ -588,7 +620,6 @@ jobs:
         python_dependencies: ''
         codecov_upload: ${{ needs.setup.outputs.trigger_repo == github.job && inputs.codecov_upload && needs.setup.outputs.py_codecov_platform == matrix.name }}
         codecov_token: ${{ secrets.CODECOV_UPLOAD_TOKEN }}
-        requirements_path: tests/downstream-ci-requirements.txt
   earthkit-regrid:
     name: earthkit-regrid
     needs:
