--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -174,7 +174,7 @@ conflator:
   downstream-ci:
     config_path: ""
 
-polytope:
-  type: python
-  deps:
-    - conflator
+# polytope:
+#   type: python
+#   deps:
+#     - conflator
