--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -168,3 +168,16 @@ thermofeel:
   type: python
   downstream-ci:
     config_path: ""
+
+danu:
+  type: python
+  master_branch: main
+  #requirements_path: environment.yml
+  test_cmd: "python -m pytest"
+  config_path: ""
+  downstream-ci-hpc:
+    modules:
+      - python3
+      - pcraster
+      - gdal
+      - ecmwf-toolbox
