--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -168,3 +168,8 @@ thermofeel:
   type: python
   downstream-ci:
     config_path: ""
+
+troika:
+  type: python
+  downstream-ci:
+    config_path: ""
