Adds earthkit-plots

--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -15,6 +15,9 @@ name: downstream-ci
       earthkit-data:
         required: false
         type: string
+      earthkit-plots:
+        required: false
+        type: string
       earthkit-geo:
         required: false
         type: string
