Added infero to dependency_tree.yml and downstream-ci and ci-hpc

--- a/.github/workflows/downstream-ci-hpc.yml
+++ b/.github/workflows/downstream-ci-hpc.yml
@@ -51,6 +51,9 @@ name: downstream-ci-hpc
       fdb:
         required: false
         type: string
+      infero:
+        required: false
+        type: string
       metkit:
         required: false
         type: string
