--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -389,9 +389,27 @@ danu:
   master_branch: main
   #requirements_path: environment.yml
   test_cmd: "python -m pytest"
+  conda_deps:
+    - "pcraster"
+    - "gdal"
+    - "libnetcdf"
+    - "numpy"
+    - "scipy"
+    - "eccodes"
+    - "python-eccodes"
+    - "numba"
+    - "netCDF4"
+    - "bottleneck"
+    - "magics"
+    - "magics-python"
+    - "geopandas"
+    - "fiona"
+    - "pyshp"
+    - "matplotlib"
+    - "pandas"
+    - "dask"
+
+  downstream-ci:
+    config_path: ""
   downstream-ci-hpc:
     config_path: ".github/ci-hpc-config.yml"
-    modules:
-      - pcraster
-      - gdal
-      - python3
