--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -182,24 +182,24 @@ danu:
   #requirements_path: environment.yml
   test_cmd: "python -m pytest"
   conda_deps: |
-      - "pcraster"
-      - "gdal"
-      - "libnetcdf"
-      - "numpy"
-      - "scipy"
-      - "eccodes"
-      - "python-eccodes"
-      - "numba"
-      - "netCDF4"
-      - "bottleneck"
-      - "magics"
-      - "magics-python"
-      - "geopandas"
-      - "fiona"
-      - "pyshp"
-      - "matplotlib"
-      - "pandas"
-      - "dask"
+      "pcraster"
+      "gdal"
+      "libnetcdf"
+      "numpy"
+      "scipy"
+      "eccodes"
+      "python-eccodes"
+      "numba"
+      "netCDF4"
+      "bottleneck"
+      "magics"
+      "magics-python"
+      "geopandas"
+      "fiona"
+      "pyshp"
+      "matplotlib"
+      "pandas"
+      "dask"
 
   downstream-ci:
     config_path: ""
