--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -181,26 +181,7 @@ danu:
   master_branch: main
   #requirements_path: environment.yml
   test_cmd: "python -m pytest"
-  conda_deps: |
-      "pcraster"
-      "gdal"
-      "libnetcdf"
-      "numpy"
-      "scipy"
-      "eccodes"
-      "python-eccodes"
-      "numba"
-      "netCDF4"
-      "bottleneck"
-      "magics"
-      "magics-python"
-      "geopandas"
-      "fiona"
-      "pyshp"
-      "matplotlib"
-      "pandas"
-      "dask"
-
+  conda_deps: "pcraster gdal netcdf4"
   downstream-ci:
     config_path: ""
   downstream-ci-hpc:
