--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -63,6 +63,9 @@ name: downstream-ci
       plume:
         required: false
         type: string
+      conflator:
+        required: false
+        type: string
       pyfdb:
         required: false
         type: string
