troika: Point pytest tmp_path factory to $RUNNER_TEMP

--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -193,5 +193,6 @@ troika:
   type: python
   downstream-ci:
     config_path: ""
-    env:
-      TMPDIR: $RUNNER_TEMP
+    test_cmd: |
+      pytest --cov=./ --cov-report=xml --basetemp=$RUNNER_TEMP
+      python -m coverage report
