--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -194,5 +194,5 @@ troika:
   downstream-ci:
     config_path: ""
     test_cmd: |
-      pytest --cov=./ --cov-report=xml --basetemp=$RUNNER_TEMP
+      pytest --cov=./ --cov-report=xml --basetemp=$RUNNER_TEMP/pytest_tmp
       python -m coverage report
