troika: Use a subdirectory of $RUNNER_TEMP for test data

--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -174,5 +174,5 @@ troika:
   downstream-ci:
     config_path: ""
     test_cmd: |
-      pytest --cov=./ --cov-report=xml --basetemp=$RUNNER_TEMP
+      pytest --cov=./ --cov-report=xml --basetemp=$RUNNER_TEMP/pytest_tmp
       python -m coverage report
