--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -48,6 +48,9 @@ name: downstream-ci
       fdb:
         required: false
         type: string
+      kronos:
+        required: false
+        type: string
       metkit:
         required: false
         type: string
